2009-07-11  Robert Jordan  <robertj@gmx.net>

	* ComInteropProxy.cs: Implement CreateProxy. Hide public/internal
	ctors forcing CreateProxy's usage. Hide CacheProxy since the
	runtime is able to lookup it anyways.
	Fixes bug #520437.

2007-07-26  Jonathan Chambers  <joncham@gmail.com>

	* ComInteropProxy.cs: Call Marshal.Release after Marshal.QI
	since it AddRef's the object. Fixes COM leak. Also fix eol-style.

2007-05-25  Jonathan Chambers  <joncham@gmail.com>

	* ComInteropProxy.cs: Call __ComObject.GetInterface overload
	that does not throw exception.  Fixes as and is operators for COM objects.

2007-02-08  Jonathan Chambers  <joncham@gmail.com>

	* ComInteropProxy.cs: Moved some code to unmanaged and cleanup some things.
	
2006-10-18  Jonathan Chambers  <joncham@gmail.com>

	* IUnknown.cs: Added.
	* IDispatch.cs: Added.

2006-08-10  Jonathan Chambers  <joncham@gmail.com>

	* ComInteropProxy.cs: Fix default constructor being always
	being called.
	
2006-07-28  Jonathan Chambers  <joncham@gmail.com>

	* ComInteropProxy.cs: Added support for marshalling objects.
	
2006-07-15  Jonathan Chambers  <joncham@gmail.com>

	* ComInteropProxy.cs: Added.
