@@ -1,3 +1,8 @@
+2010-01-19  Tom Hindle <tom_hindle@sil.org>
+
+	* ComInteropProxy.cs: Don't add proxy if it has already been added. 
+	Instread increment ref_count. Fixes bug #572043.
+
 2009-07-11  Robert Jordan  <robertj@gmx.net>
 
 	* ComInteropProxy.cs: Implement CreateProxy. Hide public/internal
